--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p> <span> work : </span> front-end developer </p>
             </div>
             <div class="box">
-                <p> <span> phone : </span> +251949320261 </p>
+                <p> <span> phone : </span> +25194******* </p>
                 <p> <span> email : </span> robeleffa2022@gmail.com </p>
                 <p> <span> country : </span> Ethiopia </p>
             </div>
@@ -144,7 +144,7 @@
         <div class="icons">
             <i class="fas fa-phone"></i>
             <h3>my number</h3>
-            <p>+251949320261</p>
+            <p>+25194*******</p>
         </div>
 
         <div class="icons">
