--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header>
 
-    <a href="#" class="logo"> <span> robel </span> effa </a>
+    <a href="#" class="logo"> <span> your </span> name </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -25,8 +25,8 @@
     </nav>
 
     <div class="follow">
-        <a href="https://www.linkedin.com/in/robel-effa-7178a7265/" class="fab fa-linkedin"></a>
-        <a href="https://github.com/Rexpass" class="fab fa-github"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-github"></a>
     </div>
 
 </header>
@@ -35,14 +35,14 @@
 
     <div class="content">
         <span class="hi"> hi there... </span>
-        <h3> i am <span> robel effa </span> </h3>
+        <h3> i am <span> your name </span> </h3>
         <p class="info"> i am a front-end web developer </p>
         <p class="text"> i'm currently learning computer science and i'm interested in web development and mobile application development! </p>
         <a href="#about" class="btn">about me</a>
     </div>
 
     <div class="image">
-        <img src="images/home.png" alt="">
+        <img src="your image" alt="">
     </div>
 
 </section>
@@ -54,22 +54,22 @@
 <div class="row-1">
 
     <div class="image">
-        <img src="images/home.png" alt="">
+        <img src="your image" alt="">
     </div>
 
     <div class="content">
-        <h3> my name is robel effa & i am a front-end web developer </h3>
+        <h3> your name  & i am a front-end web developer </h3>
         <p>i'm currently learning computer science & software engineering and i'm interested in web development and mobile application development!</p>
         <div class="box-container">
             <div class="box">
                 <p> <span> gender : </span> male </p>
-                <p> <span> language : </span> amharic, afaan oromo, english </p>
+                <p> <span> language : </span> english </p>
                 <p> <span> work : </span> front-end developer </p>
             </div>
             <div class="box">
                 <p> <span> phone : </span> +25194******* </p>
-                <p> <span> email : </span> robeleffa2022@gmail.com </p>
-                <p> <span> country : </span> Ethiopia </p>
+                <p> <span> email : </span> youremail@gmal.com </p>
+                <p> <span> country : </span> your country </p>
             </div>
         </div>
         <a href="#" class="btn">hire me</a>
@@ -138,19 +138,19 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>my email</h3>
-            <p>robeleffa2022@gmail.com</p>
+            <p>youremail@gmail.com</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-phone"></i>
             <h3>my number</h3>
-            <p>+25194*******</p>
+            <p>+251*******</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
             <h3>my address</h3>
-            <p>Mojo,Ethiopia</p>
+            <p>your address</p>
         </div>
 
     </div>
